@@ -424,8 +424,6 @@ La particularidad es que ese archivo tiene bloques a final de microdrive y al pr
 
 -En MSX y SVI no estoy usando usa msx_ppi_mode_port/svi_ppi_mode_port en lectura. Quien lo lee y para que?
 
--Poder simular joystick con opqam, por ejemplo con the spectrum y máster system:
-opqam funciona para el pad2...
 
 --restore-all-known-windows no parece abrir bien las ventanas. pasa con segun que ventanas ya puestas para restore en el zesaruxrc
 
