@@ -1234,6 +1234,7 @@ printf("\n"
 
 	printf(
         "--joystickfirekey n         Define which key triggers the fire function for the joystick: 0=Home, 1=RightAlt, 2=RightCtrl, 3=RightShift, 4=LeftAlt, 5=LeftCtrl, 6=LeftShift, 7=Tab\n"
+        "--sms-swap-controls         Sega Master System swap controls player 1 <-> player 2\n"
 		"--disablerealjoystick       Disable real joystick emulation\n"
 		"--realjoystickpath f        Change default real joystick device path (used on Linux)\n"
         "--realjoystickindex n       Change default real joystick device id (used on Windows and other OS with SDL driver)\n"
@@ -6078,6 +6079,10 @@ int parse_cmdline_options(int desde_commandline) {
                     exit(1);
 				}
 				joystick_defined_key_fire=valor;
+            }
+
+            else if (!strcmp(argv[puntero_parametro],"--sms-swap-controls")) {
+                sms_swap_controls.v=1;
             }
 
 
