@@ -37,6 +37,7 @@ Improve compilation: settings --enable-memptr --enable-visualmem --enable-cpusta
 Improved Inves Spectrum+ emulation: alert when a game may crash due to the Inves write-on-interrupt bug
 Improved Spectrum Z80 CPU emulation core: add wait state (needed to emulate microdrive)
 Improved PCW emulation: allow Plus models videomode changes
+Improved Sega Master System emulation: allow to swap controls player 1 <-> player 2
 Improved ZSF snapshot: save Datagear DMA state
 Allow saving .Z80 TC2048, TC2068, TS2068 snapshots. Allow loading .Z80 TC2048, TC2068 snapshots
 
